--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
   </header>
   <main>
     <section class="section-about">
-      <div class="u-center-text u-margin-bottom-8 ">
+      <div class="u-center-text u-margin-bottom-big ">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
       </div>
       <div class="row">
         <div class="col-1-of-2">
-          text content
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+          <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda cum itaque porro dolores! Id odio enim, reprehenderit exercitationem neque, obcaecati ullam amet saepe ea animi, facilis quasi dolor dolore illum.</p>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+          <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda cum itaque porro dolores! Id odio enim, reprehenderit exercitationem neque</p>
+          <a href="#" class="btn-text">Learn More &rarr;</a>
+
         </div>
         <div class="col-1-of-2">
           image composition
