--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="heading-primary--main">Outdoors</span>
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
-      <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+      <a href="#" class="btn btn--white  ">Discover our tours</a>
     </div>
   </header>
   <main>
@@ -86,6 +86,31 @@
         </div>
       </div>
     </section>
+    <section class="section-tours">
+      <div class="u-center-text u-margin-bottom-big ">
+        <h2 class="heading-secondary">
+          Most popular tours
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              Front
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              Back
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          col 1 of 3
+        </div>
+        <div class="col-1-of-3">
+          col 1 of 3
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- <section class="grid-test">
@@ -130,5 +155,3 @@
 </body>
 
 </html>
-
-test
