--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <input type="email" class="form__input" placeholder="Email address" id="email"  autocomplete="off" required>
                 <label for="email" class="form__label">Email address</label>
               </div>
-              <div class="form__group u-margin-bottom-medium">
+              <div class="form__group u-margin-bottom-medium ">
                 <div class="form__radio-group">
                   <input type="radio" id="small" class="form__radio-input" name="size">
                   <label for="small" class="form__radio-label">
@@ -275,6 +275,39 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="footer__logo-box">
+      <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+    </div>
+    <div class="row">
+      <div class="col-1-of-2">
+        <div class="footer__navigation">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Company</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Contact Us</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Carrers</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Privacy Policy</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Terms</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-1-of-2">
+        <p class="footer__copyright">
+          Build my <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but not to claim it as your own design. A credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
+        </p>
+      </div>
+    </div>
+  </footer>
 
   <!-- <section class="grid-test">
     <div class="row">
