--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link href="https://fonts/googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"> 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/icon-font.css">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -14,6 +14,35 @@
 </head>
 
 <body>
+  <div class="navigation">
+    <input type="checkbox" id="navi-toggle" class="navigation__checkbox">
+
+    <label for="navi-toggle" class="navigation__button">MENU</label>
+
+    <div class="navigation__background">&nbsp;</div>
+
+    <nav class="navigation__nav">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">About Natours</a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">Your benefits</a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">Popular tours</a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">Stories</a>
+        </li>
+        <li class="navigation__item">
+          <a href="#" class="navigation__link">Book Now</a>
+        </li>
+      </ul>
+    </nav>
+
+  </div>
+
   <header class="header">
     <div class="header__logo-box">
       <img src="img/logo-white.png" alt="logo" class="header__logo">
@@ -26,6 +55,7 @@
       <a href="#" class="btn btn--white  ">Discover our tours</a>
     </div>
   </header>
+
   <main>
     <section class="section-about">
       <div class="u-center-text u-margin-bottom-big ">
@@ -275,6 +305,7 @@
       </div>
     </section>
   </main>
+
   <footer class="footer">
     <div class="footer__logo-box">
       <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
@@ -303,7 +334,7 @@
       </div>
       <div class="col-1-of-2">
         <p class="footer__copyright">
-          Build my <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but not to claim it as your own design. A credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
+          Build by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal and commercial use, but not to claim it as your own design. A credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
         </p>
       </div>
     </div>
